tests/NormalTests/paczka1/small_fuzzy/69089957.err
Error in line 5: ZFoJzskZe A79 99,66
Error in line 11: dzZB S791 74,2
